関数の説明を詳しく追加

--- a/finish/index.html
+++ b/finish/index.html
@@ -97,7 +97,7 @@
         <div class="q_container">
 
             <label>
-                <input type="checkbox" id="priceCheck">
+                <input type="checkbox" id="weightCheck">
                 500kg未満の生き物のみ表示
             </label>
 
